--- a/index.html
+++ b/index.html
@@ -18,14 +18,28 @@
             <h1>Welcome to</h1>
             <h1><span class="orange-color">Fahmida Rahman</span>'s World!</h1>
             <h3>I'm a professional Web Developer, a Fashion Designer and a Writer</h3>
-            <p>"Assalamu-Alaikum" everyone. I'm Fahmida Rahman Nira. I belong to CSE background but I always love to design anything since my childhood. That's why I looked for design something in my job so I became a web developer. And Then I fulfilled my childhood dream as a fashion designer as well. Ohh! by the way, I also wrote a book.</p>
-            <a class="button-color" target="_blank" href="https://www.linkedin.com/in/fahmida-rahman-nira-a2960b1a4/">HIRE ME</a>
+            <p>"Assalamu-Alaikum" everyone. I'm Fahmida Rahman Nira. I belong to CSE background but I always love to
+                design anything since my childhood. That's why I looked for design something in my job so I became a web
+                developer. And Then I fulfilled my childhood dream as a fashion designer as well. Ohh! by the way, I
+                also wrote a book.</p>
+            <a class="button-color" target="_blank"
+                href="https://www.linkedin.com/in/fahmida-rahman-nira-a2960b1a4/">HIRE ME</a>
         </div>
         <div class="half-width">
             <img src="images/nirabacpic1.png" alt="">
         </div>
     </section>
-
+    <section class="flex-container">
+        <div class="half-width">
+            <img src="images/nirabackpic2.png" alt="">
+        </div>
+        <div class="half-width dream-pic">
+            <h1>Dream Big</h1>
+            <h3>Become a Full-Stack Web Developer</h3>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <a class="button-color" href="">DOWNLOAD RESUME</a>
+        </div>
+    </section>
 </body>
 
 </html>
