--- a/index.html
+++ b/index.html
@@ -35,10 +35,33 @@
         </div>
         <div class="half-width dream-pic">
             <h1>Dream Big</h1>
-            <h3>Become a Full-Stack Web Developer</h3>
-            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <h3 class="orange-color">Become a Full-Stack Web Developer</h3>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how
+                to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
             <a class="button-color" href="">DOWNLOAD RESUME</a>
         </div>
+    </section>
+    <section class="exp-pic">
+        <h1 style="text-align: center;">|Experience|</h1>
+        <div class="flex-container">
+            <div id="full-web-line" class="experience-box">
+                <h2>Full Stack Web Developer</h2>
+                <h3 class="orange-color">2022-Present | Pro Level Developer</h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                    efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called
+                    Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+            <div id="baby-web-line" class="experience-box">
+                <h2>Baby Web Developer</h2>
+                <h3 class="orange-color">2021-2022 | Programming Hero Learner</h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
+                    showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.
+                </p>
+            </div>
+        </div>
+        <footer>
+            <p style="text-align: center;">© Fahmida Rahman 2021, a Programming Hero initiative.</p>
+        </footer>
     </section>
 </body>
 
